# fpf-lite

./: .cloc.options.txt  .gitignore  .repomixignore  AGENTS.md  LICENSE  README.md  fpf-cli  fpf.py  fpf_compressor.py  fpf_split.py  pyproject.toml  repo-snapshot.sh  repomix.config.json
profiles/: coding.yaml  full.yaml  market-analysis.md  tech-design.yaml
profiles/Sessions/: coding.md  market-customer.md  tech-design.md
specs/: Feature Description.md  PF-2.md  PF-3.md  PF-4.md  PF-5.md  PF-6.md  PF-7.md  PF-8.md  PF-9.md
tests/: test_pf2_download.py  test_pf3_compress_lite.py  test_pf4_compress_aggressive.py  test_pf5_split.py  test_pf6_assemble.py  test_pf9_profiles.py
