[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fpf-lite"
version = "0.1.0"
description = "FPF specification tooling"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
py-modules = ["fpf", "fpf_compressor", "fpf_split"]
